k8s/base/mysql-deployment.yaml
# k8s/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql # Deployment name
spec:
  replicas: 1 # Number of MySQL replicas (1 pod)
  selector:
    matchLabels:
      app: mysql # Match pods with this label
  template:
    metadata:
      labels:
        app: mysql # Label for the MySQL
    spec:
      containers:
        - name: mysql
          image: yehiashaikhoun/mysql:latest # MySQL image
          imagePullPolicy: Always # Image pull policy
          ports:
            - containerPort: 3306 # MySQL port
          volumeMounts:
            - name: mysql-storage # Volume mount for MySQL data
              mountPath: /var/lib/mysql # Path to mount the volume
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: mysql-storage # Volume name
          persistentVolumeClaim:
            claimName: mysql-pvc # Persistent volume claim name
