k8s/base/ingress.yaml
# k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ingress # Ingress name
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Rewrite target
    nginx.ingress.kubernetes.io/use-regex: "true" # Use regex
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # SSL redirect
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false" # Force SSL redirect
spec:
  ingressClassName: nginx # Ingress class name
  rules:
    - host: 192.168.49.2.nip.io # or testing.local (mapped in /etc/hosts if needed)
      http:
        paths:
          - path: /flask(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flaskapp-service
                port:
                  number: 80
